# train-of-thoughts

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 250416-multi-agent-w-state-pattern.ipynb  multi-agent-w-state-pattern.ipynb
