[project]
name = "train-of-thoughts"
version = "0.1.0"
authors = [
    { name="Yixin Tian", email="yixin0829@outlook.com"}
]
description = "A collection of projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.65.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pydotenv>=0.0.7",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
# Enable on top of default:
# flake8-bugbear (`B`)
# isort ("I") rules
# E302 blank-lines-top-level
select = ["E4", "E7", "E9", "F", "B", "I"]
ignore = ["B904", "F811"]
